src/objects/deposit__c.object
<CustomObject>
    <description>Deposit for Front</description>
    <fields>
        <fullName>AccountRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>入金(使用不可)</relationshipLabel>
        <relationshipName>refAccuont</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dperson__c</fullName>
        <label>扱者</label>
        <referenceTo>Worker__c</referenceTo>
        <relationshipLabel>入金伝票</relationshipLabel>
        <relationshipName>depositC3TS</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IsLockFlg__c</fullName>
        <formula>Reldeposit__r.IsLockFlg__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$ロックフラグ</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kamoku__c</fullName>
        <label>科目</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>内金</fullName>
                </value>
                <value>
                    <fullName>予約金</fullName>
                </value>
                <value>
                    <fullName>両替金</fullName>
                </value>
                <value>
                    <fullName>売掛金</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiedByUser__c</fullName>
        <formula>LastModifiedBy.LastName &amp; &quot; &quot; &amp;  LastModifiedBy.FirstName</formula>
        <label>最終更新者</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>最終更新日</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reldeposit__c</fullName>
        <label>予約会計</label>
        <referenceTo>RsvAccount__c</referenceTo>
        <relationshipLabel>入金伝票</relationshipLabel>
        <relationshipName>depositYOKF</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SalesDateCal__c</fullName>
        <formula>IF(
ISNULL(SalesDate__c),
    &quot;&quot;,
    TEXT(YEAR(SalesDate__c)) &amp; &quot;/&quot; &amp; 
    IF(MONTH(SalesDate__c) &lt; 10, 
        &quot;0&quot;&amp;TEXT(MONTH(SalesDate__c)), 
        TEXT(MONTH(SalesDate__c))) &amp; &quot;/&quot; &amp; 
    IF ( DAY(SalesDate__c) &lt; 10, 
        &quot;0&quot;&amp;TEXT(DAY(SalesDate__c)), 
        TEXT(DAY(SalesDate__c))) &amp; 
    CASE( MOD(SalesDate__c - DATE(1900, 1, 7), 7),
        0, &apos;(日)&apos;,
        1, &apos;(月)&apos;,
        2, &apos;(火)&apos;,
        3, &apos;(水)&apos;,
        4, &apos;(木)&apos;,
        5, &apos;(金) &apos;,
        &apos;(土)&apos;
    )
)</formula>
        <label>営業日付</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesDate__c</fullName>
        <label>売上計上日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <label>店舗コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipLabel>入金</relationshipLabel>
        <relationshipName>DespShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaxRate__c</fullName>
        <label>消費税</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>入金先</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>入金伝票</relationshipLabel>
        <relationshipName>depositjvy1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>depositamountExc__c</fullName>
        <label>金額(税抜)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>depositamount__c</fullName>
        <label>金額(税込)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>deposititem__c</fullName>
        <label>摘要</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>入金(使用不可)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Deposit#</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>